--- a/explorer/explorer.ui
+++ b/explorer/explorer.ui
@@ -25,17 +25,17 @@
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <widget class="QDockWidget" name="dockWidget">
+  <widget class="QDockWidget" name="matStructureViewWidget">
    <attribute name="dockWidgetArea">
     <number>2</number>
    </attribute>
    <widget class="MaterialStructureView" name="m_materialStructureView"/>
   </widget>
-  <widget class="QDockWidget" name="dockWidget_2">
+  <widget class="QDockWidget" name="layersWidget">
    <attribute name="dockWidgetArea">
     <number>1</number>
    </attribute>
-   <widget class="QWidget" name="dockWidgetContents"/>
+   <widget class="QWidget" name="layersWidgetContents"/>
   </widget>
  </widget>
  <customwidgets>
